--- a/index.qmd
+++ b/index.qmd
@@ -1,16 +1,17 @@
 ---
 title: "From R Markdown to Quarto"
+subtitle: "ASA Traveling Course 2023 - Nebraska Chapter"
 ---
 
 This workshop is designed for those who want to take their R Markdown skills and expertise and apply them in Quarto, the next generation of R Markdown. Quarto is an open-source scientific and technical publishing system that offers multilingual programming language support to create dynamic and static documents, books, presentations, blogs, and other online resources. In this workshop you will learn how to apply your reproducible authoring skills to the Quarto format and learn about new tools and workflows for authoring with Quarto in RStudio. You will learn to create static documents as well as slide presentations. The workshop will also introduce you to Quarto projects which you can use to build websites and write blogs and books. Finally, you will learn various ways to deploy and publish your Quarto projects on the web.
 
-This workshop is hosted by the ASA Nebraska Chapter and supported by the ASA Traveling Course program.
+This workshop is hosted by the [ASA Nebraska Chapter](https://community.amstat.org/amstatnebraska/home) and supported by the [ASA Traveling Course](https://community.amstat.org/coc/chapterresources/travelingcourse) program.
 
 ## Date + location
 
 🗓️ Friday, April 28
 
-🏢 ADD LOCATION
+🏢 University of Nebraska Medical Center (UNMC)
 
 ## Schedule
 
