--- a/1-hello-quarto/1-hello-quarto.qmd
+++ b/1-hello-quarto/1-hello-quarto.qmd
@@ -4,7 +4,7 @@ subtitle: "ASA Traveling Course: From R Markdown to Quarto"
 institute: "Duke University + Posit"
 author: "Dr. Mine Çetinkaya-Rundel"
 date: "2023-04-28"
-footer: "[🔗 ADD LINK](https://QUARTO.org/)"
+footer: "[🔗 mine.quarto.pub/quarto-asa-nebraska](https://mine.quarto.pub/quarto-asa-nebraska)"
 logo: "../images/quarto.png"
 format:
   revealjs:
@@ -102,6 +102,8 @@ Meet 1-2 people around you!
 :::
 
 ```{r}
+#| echo: false
+
 countdown(minutes = 2)
 ```
 
@@ -186,6 +188,22 @@ Let's get started!
 
 ![Artwork from "Hello, Quarto" keynote by Julia Lowndes and Mine Çetinkaya-Rundel, presented at RStudio Conference 2022. Illustrated by Allison Horst.](images/horst_quarto_schematic.png){fig-alt="A schematic representing the multi-language input (e.g. Python, R, Observable, Julia) and multi-format output (e.g. PDF, html, Word documents, and more) versatility of Quarto." fig-align="center"}
 
+## Quarto
+
+With Quarto you can weave together narrative text and code to produce elegantly formatted output as documents, web pages, blog posts, books and more.
+
+. . .
+
+<br>
+
+*just like R Markdown...*
+
+. . .
+
+<br>
+
+but not *just like* it, there's more to it...
+
 ## Quarto ... {.center auto-animate="true"}
 
 **unifies** + **extends** the R Markdown ecosystem
@@ -225,4 +243,245 @@ Let's get started!
 Sit back and enjoy!
 :::
 
-## Your turn:
+## Your turn
+
+::: task
+Open `hello-penguins.qmd` in RStudio and with the visual editor. Render the document. Update your name and re-render. Inspect components of the document and make one more update and re-render. Compare notes with neighbors about updates you've made and note any aspects of the document that are not clear after the tour and your first interaction with it.
+:::
+
+```{r}
+#| echo: false
+
+countdown(minutes = 10)
+```
+
+# Quarto CLI
+
+## Revisit: What is Quarto? {.smaller}
+
+Quarto is a command line interface (CLI) that renders plain text formats (`.qmd`, `.rmd`, `.md`) OR mixed formats (`.ipynb`/Jupyter notebook) into static PDF/Word/HTML reports, books, websites, presentations and more.
+
+```{py}
+#| eval: false
+#| echo: true
+#| code-line-numbers: "|1|4|12|17|18"
+mine$ quarto --help
+
+  Usage:   quarto 
+  Version: 1.3.340
+
+  Description:
+
+    Quarto CLI
+
+  Options:
+
+    -h, --help     - Show this help.                            
+    -V, --version  - Show the version number for this program.  
+
+  Commands:
+
+    render          [input] [args...]     - Render files or projects to various document types.        
+    preview         [file] [args...]      - Render and preview a document or website project.          
+    serve           [input]               - Serve a Shiny interactive document.                        
+    create          [type] [commands...]  - Create a Quarto project or extension                       
+    create-project  [dir]                 - Create a project for rendering multiple documents          
+    convert         <input>               - Convert documents to alternate representations.            
+    pandoc          [args...]             - Run the version of Pandoc embedded within Quarto.          
+    run             [script] [args...]    - Run a TypeScript, R, Python, or Lua script.                
+    add             <extension>           - Add an extension to this folder or project                 
+    install         [target...]           - Installs an extension or global dependency.                
+    publish         [provider] [path]     - Publish a document or project. Available providers include:
+    check           [target]              - Verify correct functioning of Quarto installation.         
+    help            [command]             - Show this help or the help of a sub-command.      
+```
+
+## Quarto, more than *just* `knitr`
+
+. . .
+
+We learned from 10 years of literate programming with `knitr` + `rmarkdown`
+
+![](images/qmd-knitr.png)
+
+## Quarto, more than *just* `knitr`
+
+![](images/qmd-jupyter.png)
+
+## Quarto: More than *just* `knitr`
+
+![](images/jupyter-alone.png)
+
+## Under the hood
+
+::: incremental
+-   `knitr` or `jupyter` evaluates R/Python/Julia code and returns a `.md` file along with the evaluated code
+-   Quarto applies Lua filters + CSS/LaTeX which is then evaluated alongside the `.md` file by Pandoc and converted to a final output format
+:::
+
+## Aside: Lua filters
+
+-   Here is an example of a Lua filter that converts strong emphasis to small caps, from <https://pandoc.org/lua-filters.html>:
+
+``` lua
+return {
+  {
+    Strong = function (elem)
+      return pandoc.SmallCaps(elem.c)
+    end,
+  }
+}
+```
+
+. . .
+
+-   Lua filters written by R/Python/Julia developers should be interchangeable between formats - not language specific!
+
+. . .
+
+-   We won't go into the details of writing Lua filters in this workshop, and you don't need to worry about learning about Lua filters unless you're working on extending Quarto.
+
+## From the comfort of your own ~~home~~workspace
+
+::: r-stack
+![](https://quarto.org/docs/tools/images/rstudio-preview.png){.fragment fig-alt="A screenshot of a Quarto document rendered inside RStudio" width="1200"}
+
+![](https://quarto.org/docs/tools/images/jupyterlab-preview.png){.fragment fig-alt="A screenshot of a Quarto document rendered inside JupyterLab" width="1200"}
+
+![](https://quarto.org/docs/computations/images/python-vscode.png){.fragment fig-alt="A screenshot of a Quarto document rendered inside VSCode" width="1200"}
+:::
+
+# Quarto formats
+
+## One install, "Batteries included"
+
+-   RMarkdown grew into a large ecosystem, with **varying syntax**.
+
+. . .
+
+-   Quarto comes **"batteries included"** straight out of the box
+
+    -   HTML reports and websites
+    -   PDF reports
+    -   MS Office (Word, Powerpoint)
+    -   Presentations (Powerpoint, Beamer, `revealjs`)
+    -   Books
+
+. . .
+
+-   Any language, *exact* same approach and syntax
+
+## Many Quarto formats {.smaller}
+
++-----------------+------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------+
+| Feature         | R Markdown                                                                                           | Quarto                                                                         |
++=================+======================================================================================================+================================================================================+
+| Basic Formats   | [html_document](https://pkgs.rstudio.com/rmarkdown/reference/html_document.html)                     | [html](https://quarto.org/docs/output-formats/html-basics.html)                |
+|                 |                                                                                                      |                                                                                |
+|                 | [pdf_document](https://pkgs.rstudio.com/rmarkdown/reference/pdf_document.html)                       | [pdf](https://quarto.org/docs/output-formats/pdf-basics.html)                  |
+|                 |                                                                                                      |                                                                                |
+|                 | [word_document](https://pkgs.rstudio.com/rmarkdown/reference/word_document.html)                     | [docx](https://quarto.org/docs/output-formats/ms-word.html)                    |
++-----------------+------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------+
+| Beamer          | [beamer_presentation](https://pkgs.rstudio.com/rmarkdown/reference/beamer_presentation.html)         | [beamer](https://quarto.org/docs/presentations/beamer.html)                    |
++-----------------+------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------+
+| PowerPoint      | [powerpoint_presentation](https://pkgs.rstudio.com/rmarkdown/reference/powerpoint_presentation.html) | [pptx](https://quarto.org/docs/presentations/powerpoint.html)                  |
++-----------------+------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------+
+| HTML Slides     | [xaringan](https://bookdown.org/yihui/rmarkdown/xaringan.html)                                       | [revealjs](https://quarto.org/docs/presentations/revealjs/)                    |
+|                 |                                                                                                      |                                                                                |
+|                 | [ioslides](https://bookdown.org/yihui/rmarkdown/ioslides-presentation.html)                          |                                                                                |
+|                 |                                                                                                      |                                                                                |
+|                 | [revealjs](https://bookdown.org/yihui/rmarkdown/revealjs.html)                                       |                                                                                |
++-----------------+------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------+
+| Advanced Layout | [tufte](https://bookdown.org/yihui/rmarkdown/tufte-handouts.html)                                    | [Quarto Article Layout](https://quarto.org/docs/authoring/article-layout.html) |
+|                 |                                                                                                      |                                                                                |
+|                 | [distill](https://rstudio.github.io/distill/figures.html)                                            |                                                                                |
++-----------------+------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------+
+
+## Many Quarto formats {.smaller}
+
++------------------+------------------------------------------------------------------------------+-----------------------------------------------------------------------------+
+| Feature          | R Markdown                                                                   | Quarto                                                                      |
++==================+==============================================================================+=============================================================================+
+| Cross References | [html_document2](https://bookdown.org/yihui/bookdown/a-single-document.html) | [Quarto Crossrefs](https://quarto.org/docs/authoring/cross-references.html) |
+|                  |                                                                              |                                                                             |
+|                  | [pdf_document2](https://bookdown.org/yihui/bookdown/a-single-document.html)  |                                                                             |
+|                  |                                                                              |                                                                             |
+|                  | [word_document2](https://bookdown.org/yihui/bookdown/a-single-document.html) |                                                                             |
++------------------+------------------------------------------------------------------------------+-----------------------------------------------------------------------------+
+| Websites & Blogs | [blogdown](https://pkgs.rstudio.com/blogdown/)                               | [Quarto Websites](https://quarto.org/docs/websites/)                        |
+|                  |                                                                              |                                                                             |
+|                  | [distill](https://pkgs.rstudio.com/distill/)                                 | [Quarto Blogs](https://quarto.org/docs/websites/website-blog.html)          |
++------------------+------------------------------------------------------------------------------+-----------------------------------------------------------------------------+
+| Books            | [bookdown](https://pkgs.rstudio.com/bookdown/)                               | [Quarto Books](https://quarto.org/docs/books/)                              |
++------------------+------------------------------------------------------------------------------+-----------------------------------------------------------------------------+
+| Interactivity    | [Shiny Documents](https://bookdown.org/yihui/rmarkdown/shiny-documents.html) | [Quarto Interactive Documents](https://quarto.org/docs/interactive/shiny/)  |
++------------------+------------------------------------------------------------------------------+-----------------------------------------------------------------------------+
+| Journal Articles | [rticles](https://pkgs.rstudio.com/rticles/)                                 | [Journal Articles](https://quarto.org/docs/journals/index.html)             |
++------------------+------------------------------------------------------------------------------+-----------------------------------------------------------------------------+
+| Dashboards       | [flexdashboard](https://pkgs.rstudio.com/flexdashboard/)                     | Coming soon!                                                                |
++------------------+------------------------------------------------------------------------------+-----------------------------------------------------------------------------+
+
+## Your turn
+
+::: task
+In RStudio, go to File \> New File \> Quarto document to create a Quarto document with HTML output. Render the document, which will ask you to give it a name -- you can use `my-first-document.qmd`.
+
+Use the visual editor for the next steps.
+
+-   Add a title and your name as the author.
+
+-   Create two sections, one with fact you want to learn and your favorite thing about R.
+
+-   Add a table of contents.
+
+-   **Stretch goal:** Change the html theme to `sketchy`.
+:::
+
+```{r}
+#| echo: false
+
+countdown(minutes = 5)
+```
+
+# Wrap up
+
+## What about R Markdown? {.smaller}
+
+::: incremental
+-   You can render existing R Markdown documents with Quarto and you can rename them to `.qmd` files to turn them into Quarto documents.
+
+-   You don't have to do this -- R Markdown continues to be maintained.
+
+-   However, new features are being developed for Quarto.
+
+-   Additionally, Quarto
+
+    -   Offers "batteries included" shared syntax across formats
+
+    -   Allows you to choose your own editor and your preferred data science language
+
+    -   Comes with richer and more accessible features out of the box
+
+    -   Is actively developed
+:::
+
+## Questions
+
+::: task
+Any questions / anything you'd like to review before we wrap up this module?
+:::
+
+## One last thing!
+
+::: task
+Where does the name "Quarto" come from?
+:::
+
+. . .
+
+```{=html}
+<iframe src="https://en.wikipedia.org/wiki/Quarto" title = "Quarto on Wikipedia" frameborder="1" height="400" width="900"></iframe>
+```
+::: aside
+Source: <https://en.wikipedia.org/wiki/Quarto>
+:::
