--- a/2-documents/index.qmd
+++ b/2-documents/index.qmd
@@ -13,4 +13,8 @@ title: "Documents"
 
 -   <a href="https://raw.githubusercontent.com/mine-cetinkaya-rundel/quarto-asa-nebraska/main/exercises/hello-penguins.qmd">{{< fa download >}} `hello-penguins.qmd`</i></a>
 
--   <a href="https://raw.githubusercontent.com/mine-cetinkaya-rundel/quarto-asa-nebraska/main/exercises/my-first-document.qmd">{{< fa download >}} `my-first-document.qmd`</i></a>
+-   <a href="https://raw.githubusercontent.com/mine-cetinkaya-rundel/quarto-asa-nebraska/main/exercises/markdown-syntax.qmd">{{< fa download >}} `markdown-syntax.qmd`</i></a>
+
+-   <a href="https://raw.githubusercontent.com/mine-cetinkaya-rundel/quarto-asa-nebraska/main/exercises/callout-boxes.qmd">{{< fa download >}} `callout-boxes.qmd`</i></a>
+
+-   <a href="https://raw.githubusercontent.com/mine-cetinkaya-rundel/quarto-asa-nebraska/main/exercises/tables-figures.qmd">{{< fa download >}} `tables-figures.qmd`</i></a>
