--- a/pre-work.qmd
+++ b/pre-work.qmd
@@ -16,7 +16,7 @@ Prior to the workshop, please complete the following steps:
 #| eval: false
 
 pkg_list <- c(
-  "tidyverse", "gt", "ggthemes", "palmerpenguins"
+  "tidyverse", "gt", "ggthemes", "palmerpenguins", "quarto", "here"
 )
 install.packages(pkg_list)
 ```
