--- a/index.qmd
+++ b/index.qmd
@@ -15,15 +15,25 @@ This workshop is hosted by the [ASA Nebraska Chapter](https://community.amstat.o
 
 ## Schedule
 
-| Time          | Module                        |
-|---------------|-------------------------------|
-| 09:00 - 10:30 | Hello Quarto                  |
-| 10:30 - 11:00 | Break                         |
-| 11:00 - 12:30 | Documents                     |
-| 12:30 - 13:30 | Lunch                         |
-| 13:30 - 15:00 | Presentations and manuscripts |
-| 15:00 - 15:30 | Break                         |
-| 15:30 - 17:00 | Websites and publishing       |
++-------------------+------------------------------------------------+
+| Time              | Module                                         |
++===================+================================================+
+| 09:00 - 10:30     | [Hello Quarto](1-hello-quarto/index.qmd)       |
++-------------------+------------------------------------------------+
+| 10:30 - 11:00     | Break ☕                                       |
++-------------------+------------------------------------------------+
+| 11:00 - 12:30     | [Documents](2-documents/index.qmd)             |
++-------------------+------------------------------------------------+
+| 12:30 - 13:30     | Lunch 🍽️                                       |
++-------------------+------------------------------------------------+
+| 13:30 - 15:00     | [Presentations](3-presentations/index.qmd)     |
++-------------------+------------------------------------------------+
+| 15:00 - 15:30     | Break ☕                                       |
++-------------------+------------------------------------------------+
+| 15:30 - 17:00     | [Websites](4-websites/index.qmd)               |
+|                   |                                                |
+|                   | Time permitting: Journal articles              |
++-------------------+------------------------------------------------+
 
 ## Instructors
 
