--- a/pre-work.qmd
+++ b/pre-work.qmd
@@ -20,3 +20,5 @@ pkg_list <- c(
 )
 install.packages(pkg_list)
 ```
+
+-   Download `exercises.zip` at <https://mine.quarto.pub/quarto-asa-nebraska/exercises.zip> and unzip it on your Desktop or somewhere you can easily locate on your computer. Then, go to RStudio \> File \> New Project \> Existing Directory and navigate to the unzipped `exercises` folder and create an RStudio project in there and open it.
